Sprint 2/src/components/NextVideo/NextVideo.scss
@use '../../partials/variables' as *;
@use '../../partials/mixins' as *;

.next-video__card {
    @include flex-control(flex, initial, initial, initial, flex-start, initial);
    margin: 2.4rem 0 0;
    width: 28.8rem;
    text-decoration: none;

    .card {

        &__image-next {
            margin: 0 1.6rem 0 0;
            width: 12rem;
            height: 7rem;
            object-fit: cover;
            object-position: center;
        }

        &__info-next {
            @include flex-control(flex, column, initial, initial, initial, center);
        }

        &__title-next {
            display: -webkit-box;
            margin: 0 0 1.6rem;
            height: 3.4rem;
            overflow: hidden;
            -webkit-line-clamp: 2;
            -webkit-box-orient: vertical;
            font-size: $fs-card-aside-mbl;
            font-weight: 600;
        }

        &__channel-next {
            font-size: $fs-card-aside-mbl;
        }
    }

    @include breakpoint(768px) {
        width: 34.4rem;
    
        .card {
    
            &__info-next {
                width: 20.2rem;
            }
    
            &__title-next {
                display: initial;
                font-size: $fs-card-aside-tab;
            }
        }
        
    }
}

